--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Backend List Teachers
       id: backend-list-teachers
       uses: classroom-resources/autograding-command-grader@v1
       with:
-        node-version: 16
         test-name: Backend List Teachers
         setup-command: npm install
         command: npm test -- -t "GET /listTeachers should show all teachers"
