--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@angular/cli": "^16.2.9",
     "@angular/forms": "^18.2.3",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
